Use border-box box-sizing to avoid horizontal overflow

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -7,8 +7,15 @@ $border-radius: 4px;
 $font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
   sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 
+/* Sane box model to prevent horizontal overflow */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
-  box-sizing: content-box;
+  box-sizing: border-box;
   font-family: $font-family;
   margin: 0 auto;
   line-height: 1.7;
